# zeroclaw

./: Cargo.toml
crates/zeroclaw-api/: Cargo.toml
crates/zeroclaw-api/src/: cli_channel.rs  lib.rs
crates/zeroclaw-channels/src/orchestrator/: mod.rs
crates/zeroclaw-config/src/: schema.rs
crates/zeroclaw-misc/: Cargo.toml
crates/zeroclaw-misc/src/: lib.rs  migration.rs
crates/zeroclaw-misc/src/approval/: mod.rs
crates/zeroclaw-misc/src/cron/: mod.rs  store.rs  types.rs
crates/zeroclaw-misc/src/hardware/: aardvark_tools.rs  datasheet.rs  gpio.rs  loader.rs  mod.rs  pico_code.rs  pico_flash.rs  rpi.rs  subprocess.rs  tool_registry.rs
crates/zeroclaw-misc/src/hooks/: runner.rs
crates/zeroclaw-misc/src/hooks/builtin/: command_logger.rs  webhook_audit.rs
crates/zeroclaw-misc/src/integrations/: mod.rs
crates/zeroclaw-misc/src/onboard/: wizard.rs
crates/zeroclaw-misc/src/peripherals/: arduino_flash.rs  arduino_upload.rs  capabilities_tool.rs  mod.rs  rpi.rs  serial.rs  uno_q_bridge.rs
crates/zeroclaw-misc/src/plugins/: wasm_channel.rs  wasm_tool.rs
crates/zeroclaw-misc/src/rag/: mod.rs
crates/zeroclaw-misc/src/runtime/: mod.rs
crates/zeroclaw-misc/src/security/: estop.rs  otp.rs  workspace_boundary.rs
crates/zeroclaw-misc/src/service/: mod.rs
crates/zeroclaw-misc/src/skills/: creator.rs  improver.rs  mod.rs
crates/zeroclaw-misc/src/sop/: dispatch.rs  engine.rs  mod.rs  types.rs
crates/zeroclaw-misc/src/tui/: onboarding.rs
crates/zeroclaw-misc/src/tunnel/: mod.rs
crates/zeroclaw-runtime/src/agent/: agent.rs  loop_.rs
src/: cli_input.rs  i18n.rs  identity.rs  migration.rs  util.rs
src/approval/: mod.rs
src/config/: schema.rs
src/cost/: mod.rs
src/daemon/: mod.rs
src/health/: mod.rs
src/heartbeat/: mod.rs
src/hooks/: mod.rs
src/integrations/: mod.rs
src/nodes/: mod.rs
src/observability/: mod.rs
src/onboard/: mod.rs
src/peripherals/: mod.rs
src/plugins/: mod.rs
src/rag/: mod.rs
src/routines/: mod.rs
src/runtime/: mod.rs
src/security/: mod.rs
src/service/: mod.rs
src/skillforge/: mod.rs
src/skills/: mod.rs
src/sop/: mod.rs
src/trust/: mod.rs
src/tui/: mod.rs
src/tunnel/: mod.rs
src/verifiable_intent/: mod.rs
