[package]
name = "zeroclaw-misc"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Miscellaneous ZeroClaw subsystems: security, observability, gateway, cron, SOP, skills, hardware, TUI, and more."
publish = false

[dependencies]
zeroclaw-api = { path = "../zeroclaw-api" }
zeroclaw-infra = { path = "../zeroclaw-infra" }
zeroclaw-config = { path = "../zeroclaw-config" }
zeroclaw-providers = { path = "../zeroclaw-providers" }
zeroclaw-memory = { path = "../zeroclaw-memory" }
zeroclaw-channels = { path = "../zeroclaw-channels", features = ["channel-email", "channel-lark"] }
zeroclaw-tools = { path = "../zeroclaw-tools" }
zeroclaw-tool-call-parser = { path = "../zeroclaw-tool-call-parser" }
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
console = "0.16"
cron = "0.15"
crossterm = { version = "0.29", features = ["event-stream"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
directories = "6.0"
flate2 = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
glob = "0.3"
hex = "0.4"
hmac = "0.12"
hostname = "0.4.2"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
indicatif = "0.18"
lru = "0.16"
mime_guess = "2"
nanohtml2text = "0.2"
parking_lot = "0.12"
portable-atomic = "1"
rand = "0.10"
ratatui = { version = "0.30", default-features = true }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream", "socks"] }
ring = "0.17"
rust-embed = "8"
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1.14.0"
schemars = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
shellexpand = "3.1"
tar = "0.4"
tempfile = "3.26"
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-rustls = "0.26.4"
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", default-features = false }
toml = "1.0"
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"] }
tracing = { version = "0.1", default-features = false }
urlencoding = "2.1"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
webpki-roots = "1.0.6"
which = "8.0"
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }
zeroclaw-macros = { path = "../zeroclaw-macros", version = "0.1.0" }

# Optional deps
aardvark-sys = { path = "../aardvark-sys", version = "0.1.0" }
prometheus = { version = "0.14", default-features = false, optional = true }
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls-webpki-roots"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22", optional = true }
landlock = { version = "0.4", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["observability-prometheus", "skill-creation"]
observability-prometheus = ["dep:prometheus"]
observability-otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
peripheral-rpi = ["rppal"]
sandbox-landlock = ["dep:landlock"]
hardware = []
skill-creation = []

[dev-dependencies]
tempfile = "3.26"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
scopeguard = "1.2"
